@@ -2062,6 +2062,11 @@ sub image_pnm {
 
 Imports and returns a new PNG image object.  C<$file> may be either a filename or a filehandle.
 
+Note: PNG files that include an alpha (transparency) channel go through a
+relatively slow process of separating the transparency channel into a PDF SMask
+object.  Install Image::PNG::Libpng and the libpng library to speed this up by
+an order of magnitude.
+
 =cut
 
 sub image_png {
